--- a/indes.html
+++ b/indes.html
@@ -11,7 +11,8 @@
 <body>
     <header id="header">
         <div class="container">
-            <img src="./assets/pngwing.com.png" alt="" id="header-img">
+            <div class="logo"><img src="./assets/pngwing.com.png" alt="best image" id="header-img">
+            <p>Beastmovies</p></div>
             <nav id="nav-bar">
             <a href="#" class="nav-link active">Home</a>
             <a href="#" class="nav-link">Movies</a>
@@ -29,6 +30,15 @@
                 <br>
                 <button role="button" class="buttonp"><i class="fas fa-play"></i>play</button>
                 <button role="button" class="buttonp"><i class="fas fa-info-circle"></i>more information</i></button>
+            </div>
+        </section>
+        <section class="form">
+            <div class="container">
+                <form id="form" action="https://www.freecodecamp.com/email-submit">
+                    <label id="email" for="mail"></label>
+                    <input type="email" id="email" name="email"  placeholder="Yourmail@domain.com"required="">
+                    <button type="submit" id="submit" class="submit-button">Submit</button>
+                </form>
             </div>
         </section>
     </main>
