--- a/index.html
+++ b/index.html
@@ -23,17 +23,10 @@
         </div>
     </header>
     <main>
-        <section class="main-movie">
+        <section class="banner">
             <div class="container">
-                <h3 class="title">Jurassic Park</h3>
-                <p class="description_movie">A wealthy entrepreneur secretly creates a theme park featuring living dinosaurs drawn from prehistoric DNA. Before opening day, he invites a team of experts and his two eager grandchildren to experience the park and help calm anxious investors. However, the park is anything but amusing as the security systems go off-line and the dinosaurs escape.</p>
-                <br>
-                <button role="button" class="buttonp"><i class="fas fa-play"></i>play</button>
-                <button role="button" class="buttonp"><i class="fas fa-info-circle"></i>more information</i></button>
-            </div>
-        </section>
-        <section class="form">
-            <div class="container">
+                <h3 class="title">Unlimited movies, TV shows, and <b>more</b></h3>
+                <p class="jingle">Watch anywhere. Cancel anytime. Ready to watch? Enter your email to create or restart your membership.</p>
                 <form id="form" action="https://www.freecodecamp.com/email-submit">
                     <label id="email" for="mail"></label>
                     <input type="email" id="email" name="email"  placeholder="Yourmail@domain.com"required="">
