--- a/index.html
+++ b/index.html
@@ -26,12 +26,47 @@
         <section class="banner">
             <div class="container">
                 <h3 class="title">Unlimited movies, TV shows, and <b>more</b></h3>
-                <p class="jingle">Watch anywhere. Cancel anytime. Ready to watch? Enter your email to create or restart your membership.</p>
+                <p class="jingle">Watch anywhere. Cancel anytime. Ready to watch?</p>
+                <p class="jingle">Enter your email to create or restart your membership.</p>
                 <form id="form" action="https://www.freecodecamp.com/email-submit">
                     <label id="email" for="mail"></label>
-                    <input type="email" id="email" name="email"  placeholder="Yourmail@domain.com"required="">
-                    <button type="submit" id="submit" class="submit-button">Submit</button>
+                    <input type="email" id="email-input" name="email"  placeholder="Email adress"required="">
+                    <button type="submit" id="submit" class="submit-button">GET STARTED<i class="fas fa-chevron-right"></i></button>
                 </form>
+            </div>
+        </section>
+        <section class="membership">
+            <div class="container">
+                <div class="member">
+                    <h3>Normal</h3>
+                    <ul>
+                        <li>2 devices</li>
+                        <li>Full HD</li>
+                        <li>Tablets</li>
+                        <li>5 U$D per Month</li>
+                    </ul>
+                    <button type="submit" id="submit" class="submit-button">JOIN<i class="fas fa-chevron-right"></i></button>
+                </div>
+                <div class="member">
+                    <h3>Premium</h3>
+                    <ul>
+                        <li>4 devices</li>
+                        <li>Full HD</li>
+                        <li>TV and Tablets</li>
+                        <li>10 U$D Per month</li>
+                    </ul>
+                    <button type="submit" id="submit" class="submit-button">JOIN<i class="fas fa-chevron-right"></i></button>
+                </div>
+                <div class="member">
+                    <h3 class="beast">BEAST</h3>
+                    <ul>
+                        <li>Unlimited devices</li>
+                        <li>4k </li>
+                        <li>Any devices</li>
+                        <li>15 U$D Per Month</li>
+                    </ul>
+                    <button type="submit" id="submit" class="submit-button">JOIN<i class="fas fa-chevron-right"></i></button>
+                </div>
             </div>
         </section>
     </main>
