--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="banner">
             <div class="container">
-                <h3 class="title">Unlimited movies, TV shows, and <b>more</b></h3>
+                <h3 class="title">Unlimited movies, TV shows, and <b>MORE</b></h3>
                 <p class="jingle">Watch anywhere. Cancel anytime. Ready to watch?</p>
                 <p class="jingle">Enter your email to create or restart your membership.</p>
                 <form id="form" action="https://www.freecodecamp.com/email-submit">
@@ -35,40 +35,52 @@
                 </form>
             </div>
         </section>
+        <div class="divisor"></div>
         <section class="membership">
             <div class="container">
                 <div class="member">
-                    <h3>Normal</h3>
+                    <div class="card">
+                        <h3>Normal</h3>
                     <ul>
                         <li>2 devices</li>
                         <li>Full HD</li>
                         <li>Tablets</li>
                         <li>5 U$D per Month</li>
                     </ul>
-                    <button type="submit" id="submit" class="submit-button">JOIN<i class="fas fa-chevron-right"></i></button>
+                    </div>
+                    <button type="submit" id="join" class="join-button">JOIN<i class="fas fa-chevron-right"></i></button>
                 </div>
                 <div class="member">
-                    <h3>Premium</h3>
-                    <ul>
-                        <li>4 devices</li>
-                        <li>Full HD</li>
-                        <li>TV and Tablets</li>
-                        <li>10 U$D Per month</li>
-                    </ul>
-                    <button type="submit" id="submit" class="submit-button">JOIN<i class="fas fa-chevron-right"></i></button>
+                    <div class="card">
+                        <h3>Premium</h3>
+                        <ul>
+                            <li>4 devices</li>
+                            <li>Full HD</li>
+                            <li>TV and Tablets</li>
+                            <li>10 U$D Per month</li>
+                        </ul>
+                    </div>
+                    <button type="join" id="join" class="join-button">JOIN<i class="fas fa-chevron-right"></i></button>
                 </div>
                 <div class="member">
-                    <h3 class="beast">BEAST</h3>
-                    <ul>
-                        <li>Unlimited devices</li>
-                        <li>4k </li>
-                        <li>Any devices</li>
-                        <li>15 U$D Per Month</li>
-                    </ul>
-                    <button type="submit" id="submit" class="submit-button">JOIN<i class="fas fa-chevron-right"></i></button>
+                    <div class="card">
+                        <h3 class="beast">BEAST</h3>
+                        <ul>
+                            <li>Unlimited devices</li>
+                            <li>4k </li>
+                            <li>Any devices</li>
+                            <li>15 U$D Per Month</li>
+                        </ul>
+                    </div>
+                    <button type="join" id="join" class="join-button">JOIN<i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </section>
+        <div class="divisor"></div>
+        <section class="vid_container">
+            <iframe id="video" src="https://www.youtube.com/embed/SG_dim5MblE"></iframe>
+        </section>
+        <div class="divisor"></div>
     </main>
 </body>
 </html>
