--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <li>2 devices</li>
                         <li>Full HD</li>
                         <li>Tablets</li>
-                        <li>5 U$D per Month</li>
+                        <li class="price">5 U$D Per Month</li>
                     </ul>
                     </div>
                     <button type="submit" id="join" class="join-button">JOIN<i class="fas fa-chevron-right"></i></button>
@@ -57,7 +57,7 @@
                             <li>4 devices</li>
                             <li>Full HD</li>
                             <li>TV and Tablets</li>
-                            <li>10 U$D Per month</li>
+                            <li class="price">10 U$D Per month</li>
                         </ul>
                     </div>
                     <button type="join" id="join" class="join-button">JOIN<i class="fas fa-chevron-right"></i></button>
@@ -69,7 +69,7 @@
                             <li>Unlimited devices</li>
                             <li>4k </li>
                             <li>Any devices</li>
-                            <li>15 U$D Per Month</li>
+                            <li class="price">15 U$D Per Month</li>
                         </ul>
                     </div>
                     <button type="join" id="join" class="join-button">JOIN<i class="fas fa-chevron-right"></i></button>
