--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <iframe id="video" src="https://www.youtube.com/embed/SG_dim5MblE"></iframe>
         </section>
         <div class="divisor"></div>
+        <p class="copy">Copyright © design by <a class="sign" href="https://github.com/fmelcon">Fmelcon</a></p>
     </main>
 </body>
 </html>
