--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header id="header">
         <div class="container">
-            <div class="logo"><img src="./assets/pngwing.com.png" alt="best image" id="header-img">
+            <div class="logo"><img src="https://imagizer.imageshack.com/img924/8454/OwA4sz.png" alt="best image" id="header-img">
             <p>Beastmovies</p></div>
             <nav id="nav-bar">
             <a href="#" class="nav-link active">Home</a>
